# symskill

./: Cargo.toml  LICENSE  README.md  RELEASE.md  justfile
.github/workflows/: release.yml
src/: main.rs  model.rs  ops.rs  tui.rs
