[package]
name = "symskill"
version = "0.1.0"
edition = "2024"
description = "Terminal UI and CLI for managing symlinked agent skills"
license = "MIT"
repository = "https://github.com/bquenin/symskill"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
ratatui = "0.30.1"
walkdir = "2.5.0"
